--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  "publisher": "antfu",
-  "name": "ext-name",
-  "displayName": "ext-name",
-  "version": "0.0.0",
+  "publisher": "colder",
+  "name": "source-map-visualization",
+  "displayName": "Source Map Visualization",
+  "version": "0.1.0",
   "private": true,
-  "packageManager": "pnpm@7.8.0",
-  "description": "",
-  "author": "Anthony Fu <anthonyfu117@hotmail.com>",
+  "packageManager": "pnpm@7.13.6",
+  "description": "A simple visualization of source map data",
+  "author": "Colder",
   "license": "MIT",
-  "funding": "https://github.com/sponsors/antfu",
-  "homepage": "https://github.com/antfu/ext-name#readme",
+  "homepage": "https://github.com/cncolder/vscode-source-map-visualization",
   "repository": {
     "type": "git",
-    "url": "https://github.com/antfu/ext-name"
+    "url": "https://github.com/cncolder/vscode-source-map-visualization"
   },
   "bugs": {
-    "url": "https://github.com/antfu/ext-name/issues"
-  },
-  "sponsor": {
-    "url": "https://github.com/sponsors/antfu"
+    "url": "https://github.com/cncolder/vscode-source-map-visualization/issues"
   },
   "categories": [
-    "Other"
+    "Visualization"
+  ],
+  "keywords": [
+    "Source Map",
+    "visualization"
   ],
   "main": "./dist/index.js",
   "icon": "res/icon.png",
@@ -32,7 +32,7 @@
     "vscode": "^1.69.0"
   },
   "activationEvents": [
-    "onStartupFinished"
+    "onLanguage:json"
   ],
   "scripts": {
     "build": "tsup src/index.ts --external vscode",
@@ -46,19 +46,18 @@
     "release": "bumpp && nr publish"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.25.2",
-    "@antfu/ni": "^0.17.2",
-    "@types/node": "^18.6.4",
-    "@types/vscode": "^1.69.0",
+    "@antfu/eslint-config": "^0.27.0",
+    "@antfu/ni": "^0.18.2",
+    "@types/node": "^18.11.3",
+    "@types/vscode": "^1.72.0",
     "bumpp": "^8.2.1",
-    "eslint": "^8.21.0",
+    "eslint": "^8.25.0",
     "esno": "^0.16.3",
-    "pnpm": "^7.8.0",
     "rimraf": "^3.0.2",
-    "tsup": "^6.2.1",
-    "typescript": "^4.7.4",
-    "vite": "^3.0.4",
-    "vitest": "^0.21.0",
-    "vsce": "^2.10.0"
+    "tsup": "^6.3.0",
+    "typescript": "^4.8.4",
+    "vite": "^3.1.8",
+    "vitest": "^0.24.3",
+    "vsce": "^2.13.0"
   }
 }
