--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "displayName": "Source Map Visualization",
   "version": "1.1.1",
   "private": true,
-  "packageManager": "pnpm@7.14.0",
+  "packageManager": "pnpm@7.18.1",
   "description": "A simple visualization of source map data",
   "author": "Colder",
   "license": "MIT",
@@ -60,7 +60,7 @@
     }
   },
   "scripts": {
-    "build": "tsup src/index.ts --external vscode",
+    "build": "vite build",
     "dev": "nr build --watch",
     "lint": "eslint .",
     "vscode:prepublish": "nr build",
@@ -71,16 +71,15 @@
     "release": "bumpp && nr publish"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.27.0",
-    "@antfu/ni": "^0.18.2",
-    "@types/node": "^18.11.3",
-    "@types/vscode": "^1.69.0",
+    "@antfu/eslint-config": "^0.33.1",
+    "@antfu/ni": "^0.18.8",
+    "@types/node": "^18.11.11",
+    "@types/vscode": "^1.73.1",
+    "@vscode/vsce": "^2.15.0",
     "bumpp": "^8.2.1",
-    "eslint": "^8.26.0",
-    "tsup": "^6.3.0",
-    "typescript": "^4.8.4",
-    "vite": "^3.1.8",
-    "vitest": "^0.24.3",
-    "vsce": "^2.13.0"
+    "eslint": "^8.29.0",
+    "typescript": "^4.9.3",
+    "vite": "^3.2.5",
+    "vitest": "^0.25.5"
   }
 }
