--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,13 @@
 {
   "compilerOptions": {
-    "target": "es2017",
-    "module": "esnext",
-    "lib": ["esnext"],
-    "moduleResolution": "node",
+    "target": "ES2017",
+    "module": "ESNext",
+    "lib": ["ESNext"],
+    "moduleResolution": "Node",
     "esModuleInterop": true,
-    "strict": true,
-    "strictNullChecks": true,
     "resolveJsonModule": true,
+    "strict": true,
     "skipLibCheck": true,
-    "skipDefaultLibCheck": true
+    "types": ["vitest/importMeta"]
   }
 }
