--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@vscode/vsce": "^2.15.0",
     "bumpp": "^8.2.1",
     "eslint": "^8.29.0",
+    "release-it": "^15.5.1",
     "typescript": "^4.9.4",
     "vite": "^4.0.1",
     "vitest": "^0.25.8"
